# Nmap Changelog ($Id$); -*-text-*-

o [NSE] Added script http-ls. Parses web server directory index pages with
  optional recursion. [Pierre Lalet]

o [NSE] [GH#106] Added a new NSE module, ls.lua, for accumulating and
  outputting file and directory listings. The afp-ls, nfs-ls, and smb-ls
  scripts have been converted to use this module. [Pierre Lalet]

o Fix Nmap's DTD, which did not recognize that the script element could contain
  character data when a script returns a number or a boolean.
  [Jonathan Daugherty]

o [GH#75] Normalize check targets to standard format check-*.
  [Gioacchino Mazzurco]

o [GH#75] Normalize clean and distclean targets to standard format clean-* and
  distclean-*. [Gioacchino Mazzurco]

o [GH#75] Normalize build targets to standard format build-*.
  [Gioacchino Mazzurco]

o [NSE] Added script xmlrpc-methods. This script perfoms introspection of
  xmlrpc services and lists methods and their description. [Gyanendra Mishra]

o [NSE] Removed http-email-harvest as the the new http-grep does email address
  scraping by default. [Gyanendra Mishra]

o [NSE] Added script http-fetch. This script can be used to fetch all files
  from the target, specific files from the target or files that match a  given
  pattern. [Gyanendra Mishra]

o [NSE] http-drupal-modules was renamed to http-drupal-enum. Extended to
  enumerate both themesa and modules of drupal installaions. [Gyanendra Mishra]

o [GH#196] Fix raw packet sending on FreeBSD 10.0 and later. FreeBSD changed
  byte order of the IPv4 stack, so SYN scan and other raw packet functions were
  broken. [Edward Napierała] Also reported in [GH#50] by Olli Hauer.

o [NSE] Added script http-svn-enum. Enumerates users of a Subversion
  repostory by examinning commit logs. [Gyanendra Mishra]

o [NSE] Added script http-svn-info. Requests information from a
  Subversion repository.[Gyanendra Mishra]

o [GH#51] Added IPv6 support to nmap_mass_rdns, improved reverse DNS cache,